Camlp5 Version 4.07:
---------------------

* [16 Aug 07] Added pa_extprint.cmo, a new syntax for extensible pretty
  printers adding a statement EXTEND_PRINTER (cf files pr_r.cmo and pr_o.ml
  as examples). Added library module Eprinter. Changes (simplifications) in
  intefaces of Pcaml for the printers.
* [02 Aug 07] Fixed bug: option -o did not work for pr_r.cmo and pr_o.cmo
  (was always stdout).
* [01 Aug 07] In EXTEND statement, added symbol FLAG: like OPT but return
  a boolean value. The antiquotation kind "flag" must be used in this case,
  but the "opt" still works by compatibility.
* [30 Jul 07] Fixed bug in normal syntax: let C x = C 1 was not accepted.
* [30 Jul 07] Changed pretty printing *normal* syntax: let C x = .. printed
  like that, *not* transformed into let x = match .. with C x -> x.

Camlp5 Version 4.06:
---------------------

* [25 Jul 07] Fixed bug: in normal syntax, the declaration of a constructor
  named "True" or "False" did not work.
* [25 Jul 07] While expanding stream parsers, transform unused bound
  variables into wildcards to prevent compiler warnings.
* [21 Jul 07] Fixed bug in normal syntax and printing of normal syntax:
  "poly type" was accepted with revised syntax, i.e. with "!" at beginning
  and displayed like it. Fixed also the printing of abstract module type
  which was not implemented. Added printing syntax of fun binding fof class
  parameters.
* [20 Jul 07] Added revised syntax for bigarrays (same than normal syntax)
  and pretty print them in their initial syntax.
* [18 Jul 07] In Grammar.Entry.print, local entries are displayed with
  a star character "*".
* [18 Jul 07] In Grammar module, added type 'parsable', functions 'parsable'
  and 'Entry.parse_parsable' like for the functorial interface.

Camlp5 Version 4.05:
---------------------

* [16 Jul 07] Fixed bug in normal syntax: optional semicolon was no more
  accepted at end of stream patterns.