@@ -1,7 +1,7 @@
 <div id="menu">
   <h1>- Camlp5 -</h1>
   <p class="subtitle">Version 4.08</p>
-  <p>...work in progress... *<br/>...18th of August 2007...</p>
+  <p>...work in progress... *<br/>...19th of August 2007...</p>
   <ul>
     <li><a href="index.html">Introduction</a></li>
     <li><a href="ptools.html">Parsing and printing tools</a></li>
@@ -46,6 +46,6 @@
     </li>
   </ul>
   <ul>
-    <li><a href="conclusion.html">Conclusion</a> *</li>
+    <li><a href="conclusion.html">Conclusion</a></li>
   </ul>
 </div>
